version/0.63/_sources/examples/gallery_examples/00-mapdl-examples/cyclic_analysis.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/00-mapdl-examples/cyclic_analysis.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_gallery_examples_00-mapdl-examples_cyclic_analysis.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_00-mapdl-examples_cyclic_analysis.py:


.. _ref_cyclic_analysis_example:

Cyclic Analysis
---------------

This example creates a bladed disc using parametric geometry of a cyclic sector
and then runs a modal analysis on that cyclic sector. We then post-process the
results using the legacy `MAPDL reader <https://readerdocs.pyansys.com/>`_ and
finally generate another cyclic model using our parametric modeler.

Our first task is to create a simple cyclic model with 7 sectors.

.. image:: ../../../images/cyclic_disc.png

First, start MAPDL as a service.

.. GENERATED FROM PYTHON SOURCE LINES 19-29

.. code-block:: default

    # sphinx_gallery_thumbnail_number = 3

    import numpy as np
    import pyvista as pv

    from ansys.mapdl.core import launch_mapdl

    mapdl = launch_mapdl()









.. GENERATED FROM PYTHON SOURCE LINES 30-34

Create the Cyclic Sector
~~~~~~~~~~~~~~~~~~~~~~~~
Create a single "sector" of our cyclic model.


.. GENERATED FROM PYTHON SOURCE LINES 34-102

.. code-block:: default



    def gen_sector(mapdl, sectors):
        """Generate a single sector within MAPDL."""

        # thickness
        thickness = 0.003  # meters
        arc_end = 2 * np.pi / sectors
        arc_cent = arc_end / 2

        # radius
        rad = 0.01  # M
        arc = pv.CircularArc(
            [rad, 0, 0], [np.cos(arc_end) * rad, np.sin(arc_end) * rad, 0], [0, 0, 0]
        )

        # interior circle
        kp_begin = [rad, 0, 0]
        kp_end = [np.cos(arc_end) * rad, np.sin(arc_end) * rad, 0]
        kp_center = [0, 0, 0]

        # exterior circle in (M)
        out_rad = 5.2e-2

        # solve for angle to get same arc.length at the end
        cent_ang = arc.length / out_rad / 2

        # interior circle
        kp_beg_outer = [
            np.cos(arc_cent - cent_ang) * out_rad,
            np.sin(arc_cent - cent_ang) * out_rad,
            0,
        ]
        kp_end_outer = [
            np.cos(arc_cent + cent_ang) * out_rad,
            np.sin(arc_cent + cent_ang) * out_rad,
            0,
        ]

        mapdl.prep7()
        mapdl.k(0, *kp_center)
        mapdl.k(0, *kp_begin)
        mapdl.k(0, *kp_end)
        mapdl.k(0, *kp_beg_outer)
        mapdl.k(0, *kp_end_outer)

        # inner arc
        mapdl.l(1, 2)  # left line
        mapdl.l(1, 3)  # right line
        lnum_inter = mapdl.l(2, 3)  # internal line
        mapdl.al("all")

        # outer "blade"
        lnum = [lnum_inter, mapdl.l(4, 5), mapdl.l(2, 4), mapdl.l(3, 5)]
        mapdl.al(*lnum)

        # extrude the model in the Z direction by ``thickness``
        mapdl.vext("all", dz=thickness)


    # generate a single sector of a 7 sector model
    sectors = 7
    gen_sector(mapdl, sectors)

    # Volume plot
    mapdl.vplot()





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_001.png
   :alt: cyclic analysis
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 103-108

Make the Model Cyclic
~~~~~~~~~~~~~~~~~~~~~
Make the model cyclic by running :func:`Mapdl.cyclic`

Note how the number of sectors matches

.. GENERATED FROM PYTHON SOURCE LINES 108-114

.. code-block:: default


    output = mapdl.cyclic()
    print(f"Expected Sectors: {sectors}")
    print(output)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Expected Sectors: 7
    USE EXISTING MODEL FOR CYCLIC SYMMETRY

     ******************************************************
     ****** COMPUTED QUANTITIES ***************************
     ******************************************************
     *  NUMBER OF SECTORS =                  7            *
     *  SECTOR ANGLE =                  51.429            *
     *  CYCLIC COORDINATE SYSTEM =           1            *
     *  EDGE COMPONENTS CONTAIN AREAS                     *
     *  LOW  EDGE COMPONENT = CYCLIC_M01L       MATCHED   *
     *  HIGH EDGE COMPONENT = CYCLIC_M01H                 *
     ******************************************************




.. GENERATED FROM PYTHON SOURCE LINES 115-118

Generate the mesh
~~~~~~~~~~~~~~~~~
Generate the finite element mesh using quadritic hexahedrals, SOLID186.

.. GENERATED FROM PYTHON SOURCE LINES 118-130

.. code-block:: default


    # element size of 0.01
    esize = 0.001

    mapdl.et(1, 186)
    mapdl.esize(esize)
    mapdl.vsweep("all")

    # plot the finite element mesh
    mapdl.eplot()





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_002.png
   :alt: cyclic analysis
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 131-133

Apply Material Properties
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 133-143

.. code-block:: default


    # Define a material (nominal steel in SI)
    mapdl.mp("EX", 1, 210e9)  # Elastic moduli in Pa (kg/(m*s**2))
    mapdl.mp("DENS", 1, 7800)  # Density in kg/m3
    mapdl.mp("NUXY", 1, 0.3)  # Poisson's Ratio

    # apply it to all elements
    mapdl.emodif("ALL", "MAT", 1)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    MODIFY ALL SELECTED ELEMENTS TO HAVE  MAT  =         1



.. GENERATED FROM PYTHON SOURCE LINES 144-148

Run the Modal Analysis
~~~~~~~~~~~~~~~~~~~~~~
Let's get the first 10 modes. Note that this will actually compute
``(sectors/2)*nmode`` based on the cyclic boundary conditions.

.. GENERATED FROM PYTHON SOURCE LINES 148-153

.. code-block:: default


    output = mapdl.modal_analysis(nmode=10, freqb=1)
    print(output)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    *** NOTE ***                            CP =      41.919   TIME= 16:23:19
     There is no title defined for this analysis.                            

     *** WARNING ***                         CP =      41.934   TIME= 16:23:19
     No constraints have been defined using the D command.                   

     GENERATE CYCLIC SYMMETRY CONSTRAINT EQUATIONS 

     *** WARNING ***                         CP =      41.960   TIME= 16:23:19
     There is no high edge node in a position to match low edge node 2545    
     (location error = 4.55E-04, maximum for all nodes).  Cyclic symmetry    
     constraint equations will be generated between the sector edges using   
     a mapping procedure similar to the CEINTF command.  This may reduce     
     solution accuracy, especially near the sector edges.                    

     NUMBER OF CONSTRAINT EQUATIONS GENERATED=   363
       (USING THE UNMATCHED NODES ALGORITHM)

     *****  MAPDL SOLVE    COMMAND  *****

     *** SELECTION OF ELEMENT TECHNOLOGIES FOR APPLICABLE ELEMENTS ***
                    ---GIVE SUGGESTIONS ONLY---

     ELEMENT TYPE         1 IS SOLID186. KEYOPT(2) IS ALREADY SET AS SUGGESTED.



     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:23:19  APR 04, 2023 CP=     41.988

                                                                               



                           S O L U T I O N   O P T I O N S

       PROBLEM DIMENSIONALITY. . . . . . . . . . . . .3-D                  
       CYCLIC SYMMETRY SECTOR ANGLE. . . . . . . . . .   51.429     DEGREES
       DEGREES OF FREEDOM. . . . . . UX   UY   UZ  
       ANALYSIS TYPE . . . . . . . . . . . . . . . . .MODAL                
          EXTRACTION METHOD. . . . . . . . . . . . . .BLOCK LANCZOS
       NUMBER OF MODES TO EXTRACT. . . . . . . . . . .    10
       USE CYCLIC MODES IN SUBSEQUENT MSUP ANALYSIS. .YES
       SHIFT POINT . . . . . . . . . . . . . . . . . .  1.0000    
       GLOBALLY ASSEMBLED MATRIX . . . . . . . . . . .SYMMETRIC  
       NUMBER OF MODES TO EXPAND . . . . . . . . . . .    10
       ELEMENT RESULTS CALCULATION . . . . . . . . . .OFF

     *** NOTE ***                            CP =      41.993   TIME= 16:23:19
     The conditions for direct assembly have been met.  No .emat or .erot    
     files will be produced.                                                 

                          L O A D   S T E P   O P T I O N S

       LOAD STEP NUMBER. . . . . . . . . . . . . . . .     1
       CYCLIC SYMMETRY HARMONIC INDEX. . . . . . . . .     0
       THERMAL STRAINS INCLUDED IN THE LOAD VECTOR . .   YES
       PRINT OUTPUT CONTROLS . . . . . . . . . . . . .NO PRINTOUT
       DATABASE OUTPUT CONTROLS. . . . . . . . . . . .ALL DATA WRITTEN




                **** CENTER OF MASS, MASS, AND MASS MOMENTS OF INERTIA ****

      CALCULATIONS ASSUME ELEMENT MASS AT ELEMENT CENTROID

      TOTAL MASS =  0.19205E-01

                               MOM. OF INERTIA         MOM. OF INERTIA
      CENTER OF MASS            ABOUT ORIGIN        ABOUT CENTER OF MASS

      XC =  0.25304E-01      IXX =   0.3686E-05      IXX =   0.7910E-06
      YC =  0.12186E-01      IYY =   0.1533E-04      IYY =   0.2994E-05
      ZC =  0.15000E-02      IZZ =   0.1891E-04      IZZ =   0.3759E-05
                             IXY =  -0.7303E-05      IXY =  -0.1381E-05
                             IYZ =  -0.3510E-06      IYZ =   0.1423E-19
                             IZX =  -0.7289E-06      IZX =   0.2460E-19


      *** MASS SUMMARY BY ELEMENT TYPE ***

      TYPE      MASS
         1  0.192050E-01

     Range of element maximum matrix coefficients in global coordinates
     Maximum = 267009240 at element 2656.                                    
     Minimum = 160766982 at element 2628.                                    

       *** ELEMENT MATRIX FORMULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            1      2658  SOLID186      0.714   0.000269
     Time at end of element matrix formulation CP = 42.5404053.              

      BLOCK LANCZOS CALCULATION OF UP TO    10 EIGENVECTORS.
      NUMBER OF EQUATIONS              =        21460
      MAXIMUM WAVEFRONT                =          240
      MAXIMUM MODES STORED             =           10
      MINIMUM EIGENVALUE               =  0.10000E+01
      MAXIMUM EIGENVALUE               =  0.10000E+31

      Memory allocated for solver              =   123.588 MB
      Memory required for in-core solution     =   117.783 MB
      Memory required for out-of-core solution =    43.967 MB

     *** NOTE ***                            CP =      43.745   TIME= 16:23:20
     The Sparse Matrix Solver used by the Block Lanczos eigensolver is       
     currently running in the in-core memory mode.  This memory mode uses    
     the most amount of memory in order to avoid using the hard drive as     
     much as possible, which most often results in the fastest solution      
     time.  This mode is recommended if enough physical memory is present    
     to accommodate all of the solver data.                                  

      Process memory required for in-core LANCZOS Workspace             =     83.001320 MB
      Process memory required for out-of-core LANCZOS Workspace         =     2.447731 MB

     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:23:21  APR 04, 2023 CP=     45.058

                                                                               



     *** FREQUENCIES FROM BLOCK LANCZOS ITERATION ***

      MODE    FREQUENCY (HERTZ)      


       FREQUENCY RANGE REQUESTED=   10 MODES ABOVE   1.00000     HERTZ

        1     1754.771705442    
        2     9255.308143420    
        3     10975.85319905    
        4     11515.65935590    
        5     21840.29355960    
        6     26924.90126341    
        7     33190.68744557    
        8     34449.50410704    
        9     38316.64350647    
       10     56181.29090902    


      ***** PARTICIPATION FACTOR AND MODAL MASS CALCULATION *****   HARMONIC INDEX=    0

     GLOBAL                GLOBAL      PARTICIPATION
      MODE   FREQUENCY    DIRECTION       FACTOR      EFFECTIVE MASS   MODAL MASS
         1   1754.77         UZ         0.10342E-10     0.10697E-21      7.0000    
                           ROTZ         0.22240E-11     0.49461E-23
         2   9255.31         UZ        -0.31748E-09     0.10079E-18      7.0000    
                           ROTZ        -0.72027E-10     0.51879E-20
         3   10975.9         UZ        -0.32046E-08     0.10270E-16      7.0000    
                           ROTZ         0.84956E-10     0.72175E-20
         4   11515.7         UZ         0.43198E-08     0.18661E-16      7.0000    
                           ROTZ        -0.12580E-09     0.15825E-19
         5   21840.3         UZ         0.54965E-08     0.30212E-16      7.0000    
                           ROTZ        -0.23806E-09     0.56672E-19
         6   26924.9         UZ         0.26193E-08     0.68610E-17      7.0000    
                           ROTZ        -0.12694E-09     0.16114E-19
         7   33190.7         UZ         0.62096E-09     0.38560E-18      7.0000    
                           ROTZ        -0.32116E-11     0.10314E-22
         8   34449.5         UZ         0.19924E-10     0.39697E-21      7.0000    
                           ROTZ         0.42446E-11     0.18016E-22
         9   38316.6         UZ        -0.19923E-08     0.39691E-17      7.0000    
                           ROTZ         0.85023E-10     0.72289E-20
        10   56181.3         UZ         0.10270E-09     0.10548E-19      7.0000    
                           ROTZ        -0.73551E-11     0.54098E-22


     *** MAPDL BINARY FILE STATISTICS
      BUFFER SIZE USED= 16384
           32.688 MB WRITTEN ON ASSEMBLED MATRIX FILE: file.full
            2.062 MB WRITTEN ON MODAL MATRIX FILE: file.mode
            1.125 MB WRITTEN ON RESULTS FILE: file.rst

     GENERATE CYCLIC SYMMETRY CONSTRAINT EQUATIONS 

     NUMBER OF CONSTRAINT EQUATIONS GENERATED=   740
       (USING THE UNMATCHED NODES ALGORITHM)

     *****  MAPDL SOLVE    COMMAND  *****

     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:23:21  APR 04, 2023 CP=     45.196

                                                                               



                          L O A D   S T E P   O P T I O N S

       LOAD STEP NUMBER. . . . . . . . . . . . . . . .     2
       CYCLIC SYMMETRY HARMONIC INDEX. . . . . . . . .     1
       THERMAL STRAINS INCLUDED IN THE LOAD VECTOR . .   YES
       PRINT OUTPUT CONTROLS . . . . . . . . . . . . .NO PRINTOUT
       DATABASE OUTPUT CONTROLS. . . . . . . . . . . .ALL DATA WRITTEN


      BLOCK LANCZOS CALCULATION OF UP TO    10 EIGENVECTORS.
      NUMBER OF EQUATIONS              =        42920
      MAXIMUM WAVEFRONT                =          348
      MAXIMUM MODES STORED             =           10
      MINIMUM EIGENVALUE               =  0.10000E+01
      MAXIMUM EIGENVALUE               =  0.10000E+31

      Memory allocated for solver              =   263.223 MB
      Memory required for in-core solution     =   250.852 MB
      Memory required for out-of-core solution =    88.338 MB

     *** NOTE ***                            CP =      47.214   TIME= 16:23:22
     The Sparse Matrix Solver used by the Block Lanczos eigensolver is       
     currently running in the in-core memory mode.  This memory mode uses    
     the most amount of memory in order to avoid using the hard drive as     
     much as possible, which most often results in the fastest solution      
     time.  This mode is recommended if enough physical memory is present    
     to accommodate all of the solver data.                                  

     *** WARNING ***                         CP =      48.284   TIME= 16:23:23
     The eigenproblem is ill-conditioned (relative residual from test linear 
     solve: 1.042614E-03).  The accuracy of the solution may not be          
     satisfactory.  Modifying the initial value of the frequency shift       
     (FREQB in the MODOPT command) or changing the boundary conditions of    
     the model might solve the problem.                                      
                                                                         

      Process memory required for in-core LANCZOS Workspace             =     165.519630 MB
      Process memory required for out-of-core LANCZOS Workspace         =     4.412453 MB

     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:23:24  APR 04, 2023 CP=     50.093

                                                                               



     *** FREQUENCIES FROM BLOCK LANCZOS ITERATION ***

      MODE    FREQUENCY (HERTZ)      


       FREQUENCY RANGE REQUESTED=   10 MODES ABOVE   1.00000     HERTZ

        1     4016.678978784    
        2     4016.678987006    
        3     4064.701838660    
        4     4064.701854535    
        5     10313.63519816    
        6     10313.63528996    
        7     14213.05729131    
        8     14213.05730241    
        9     19292.87792952    
       10     19292.87832280    


      ***** PARTICIPATION FACTOR AND MODAL MASS CALCULATION *****   HARMONIC INDEX=    1

     GLOBAL                GLOBAL      PARTICIPATION
      MODE   FREQUENCY    DIRECTION       FACTOR      EFFECTIVE MASS   MODAL MASS
        11   4016.68         UX         0.24584E-05     0.60439E-11      3.5000    
                             UY         0.24809E-05     0.61548E-11
                           ROTX         0.16118E-03     0.25979E-07
                           ROTY        -0.54371E-04     0.29562E-08
        12   4016.68         UX        -0.11837E-05     0.14011E-11      3.5000    
                             UY        -0.11859E-05     0.14063E-11
                           ROTX        -0.54375E-04     0.29566E-08
                           ROTY        -0.16119E-03     0.25982E-07
        13   4064.70         UX        -0.10790         0.11642E-01      3.5000    
                             UY         0.50638E-01     0.25642E-02
                           ROTX        -0.75964E-04     0.57705E-08
                           ROTY        -0.16184E-03     0.26193E-07
        14   4064.70         UX         0.50642E-01     0.25647E-02      3.5000    
                             UY         0.10792         0.11646E-01
                           ROTX        -0.16189E-03     0.26208E-07
                           ROTY         0.75975E-04     0.57723E-08
        15   10313.6         UX         0.36300E-06     0.13177E-12      3.5000    
                             UY         0.36224E-06     0.13122E-12
                           ROTX         0.60470E-04     0.36566E-08
                           ROTY         0.53572E-03     0.28700E-06
        16   10313.6         UX         0.15764E-05     0.24851E-11      3.5000    
                             UY         0.15761E-05     0.24841E-11
                           ROTX         0.53572E-03     0.28699E-06
                           ROTY        -0.60467E-04     0.36563E-08
        17   14213.1         UX        -0.42569E-05     0.18121E-10      3.5000    
                             UY        -0.42555E-05     0.18109E-10
                           ROTX         0.17650E-03     0.31152E-07
                           ROTY         0.19758E-04     0.39040E-09
        18   14213.1         UX        -0.56242E-07     0.31632E-14      3.5000    
                             UY        -0.52245E-07     0.27295E-14
                           ROTX         0.19769E-04     0.39082E-09
                           ROTY        -0.17649E-03     0.31148E-07
        19   19292.9         UX         0.82122E-01     0.67441E-02      3.5000    
                             UY        -0.48874E-01     0.23886E-02
                           ROTX         0.73315E-04     0.53751E-08
                           ROTY         0.12318E-03     0.15173E-07
        20   19292.9         UX        -0.48875E-01     0.23888E-02      3.5000    
                             UY        -0.82134E-01     0.67460E-02
                           ROTX         0.12321E-03     0.15180E-07
                           ROTY        -0.73319E-04     0.53757E-08

     GENERATE CYCLIC SYMMETRY CONSTRAINT EQUATIONS 

     NUMBER OF CONSTRAINT EQUATIONS GENERATED=   726
       (USING THE UNMATCHED NODES ALGORITHM)

     *****  MAPDL SOLVE    COMMAND  *****

     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:23:24  APR 04, 2023 CP=     50.213

                                                                               



                          L O A D   S T E P   O P T I O N S

       LOAD STEP NUMBER. . . . . . . . . . . . . . . .     3
       CYCLIC SYMMETRY HARMONIC INDEX. . . . . . . . .     2
       THERMAL STRAINS INCLUDED IN THE LOAD VECTOR . .   YES
       PRINT OUTPUT CONTROLS . . . . . . . . . . . . .NO PRINTOUT
       DATABASE OUTPUT CONTROLS. . . . . . . . . . . .ALL DATA WRITTEN


      BLOCK LANCZOS CALCULATION OF UP TO    10 EIGENVECTORS.
      NUMBER OF EQUATIONS              =        42906
      MAXIMUM WAVEFRONT                =          333
      MAXIMUM MODES STORED             =           10
      MINIMUM EIGENVALUE               =  0.10000E+01
      MAXIMUM EIGENVALUE               =  0.10000E+31

      Memory allocated for solver              =   263.830 MB
      Memory required for in-core solution     =   251.431 MB
      Memory required for out-of-core solution =    88.369 MB

     *** NOTE ***                            CP =      52.256   TIME= 16:23:25
     The Sparse Matrix Solver used by the Block Lanczos eigensolver is       
     currently running in the in-core memory mode.  This memory mode uses    
     the most amount of memory in order to avoid using the hard drive as     
     much as possible, which most often results in the fastest solution      
     time.  This mode is recommended if enough physical memory is present    
     to accommodate all of the solver data.                                  

      Process memory required for in-core LANCZOS Workspace             =     165.465797 MB
      Process memory required for out-of-core LANCZOS Workspace         =     4.411171 MB

     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:23:27  APR 04, 2023 CP=     54.391

                                                                               



     *** FREQUENCIES FROM BLOCK LANCZOS ITERATION ***

      MODE    FREQUENCY (HERTZ)      


       FREQUENCY RANGE REQUESTED=   10 MODES ABOVE   1.00000     HERTZ

        1     1057.619328549    
        2     1057.619328577    
        3     3380.530621123    
        4     3380.530621125    
        5     6319.874142948    
        6     6319.874142948    
        7     10091.65459692    
        8     10091.65459693    
        9     18041.41473794    
       10     18041.41473794    


       ***** MODAL MASS CALCULATION *****   HARMONIC INDEX=    2

      MODE   FREQUENCY       MODAL MASS
        21   1057.62           3.5000    
        22   1057.62           3.5000    
        23   3380.53           3.5000    
        24   3380.53           3.5000    
        25   6319.87           3.5000    
        26   6319.87           3.5000    
        27   10091.7           3.5000    
        28   10091.7           3.5000    
        29   18041.4           3.5000    
        30   18041.4           3.5000    

     GENERATE CYCLIC SYMMETRY CONSTRAINT EQUATIONS 

     NUMBER OF CONSTRAINT EQUATIONS GENERATED=   726
       (USING THE UNMATCHED NODES ALGORITHM)

     *****  MAPDL SOLVE    COMMAND  *****

     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:23:27  APR 04, 2023 CP=     54.451

                                                                               



                          L O A D   S T E P   O P T I O N S

       LOAD STEP NUMBER. . . . . . . . . . . . . . . .     4
       CYCLIC SYMMETRY HARMONIC INDEX. . . . . . . . .     3
       THERMAL STRAINS INCLUDED IN THE LOAD VECTOR . .   YES
       PRINT OUTPUT CONTROLS . . . . . . . . . . . . .NO PRINTOUT
       DATABASE OUTPUT CONTROLS. . . . . . . . . . . .ALL DATA WRITTEN


      BLOCK LANCZOS CALCULATION OF UP TO    10 EIGENVECTORS.
      NUMBER OF EQUATIONS              =        42906
      MAXIMUM WAVEFRONT                =          333
      MAXIMUM MODES STORED             =           10
      MINIMUM EIGENVALUE               =  0.10000E+01
      MAXIMUM EIGENVALUE               =  0.10000E+31

      Memory allocated for solver              =   263.326 MB
      Memory required for in-core solution     =   250.950 MB
      Memory required for out-of-core solution =    88.290 MB

     *** NOTE ***                            CP =      56.554   TIME= 16:23:28
     The Sparse Matrix Solver used by the Block Lanczos eigensolver is       
     currently running in the in-core memory mode.  This memory mode uses    
     the most amount of memory in order to avoid using the hard drive as     
     much as possible, which most often results in the fastest solution      
     time.  This mode is recommended if enough physical memory is present    
     to accommodate all of the solver data.                                  

      Process memory required for in-core LANCZOS Workspace             =     165.465797 MB
      Process memory required for out-of-core LANCZOS Workspace         =     4.411171 MB

     *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  22.2     ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     16:23:29  APR 04, 2023 CP=     58.685

                                                                               



     *** FREQUENCIES FROM BLOCK LANCZOS ITERATION ***

      MODE    FREQUENCY (HERTZ)      


       FREQUENCY RANGE REQUESTED=   10 MODES ABOVE   1.00000     HERTZ

        1     1193.646581143    
        2     1193.646581180    
        3     3319.531421344    
        4     3319.531421346    
        5     7336.371613692    
        6     7336.371613694    
        7     9979.948398081    
        8     9979.948398082    
        9     19188.40690290    
       10     19188.40690290    


       ***** MODAL MASS CALCULATION *****   HARMONIC INDEX=    3

      MODE   FREQUENCY       MODAL MASS
        31   1193.65           3.5000    
        32   1193.65           3.5000    
        33   3319.53           3.5000    
        34   3319.53           3.5000    
        35   7336.37           3.5000    
        36   7336.37           3.5000    
        37   9979.95           3.5000    
        38   9979.95           3.5000    
        39   19188.4           3.5000    
        40   19188.4           3.5000




.. GENERATED FROM PYTHON SOURCE LINES 154-171

Get the Results of the Cyclic Modal Analysis
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Visualize a traveling wave from the modal analysis.

For more details, see `Validation of a Modal Work Approach for Forced
Response Analysis of Bladed Disks
<https://www.mdpi.com/2076-3417/11/12/5437/pdf>`_, or the `Cyclic Symmetry
Analysis Guide
<https://ansyshelp.ansys.com/Views/Secured/corp/v222/en/pdf/Ansys_Mechanical_APDL_Cyclic_Symmetry_Analysis_Guide.pdf>`_

.. note::
   This uses the legacy result reader, which will be deprecated at some point
   in favor of DPF, but we can use this for now for some great animations.

For more details regarding cyclic result post processing, see:
- `Understanding Nodal Diameters from a Cyclic Model Analysis <https://readerdocs.pyansys.com/examples/01-cyclic_results/academic_sector_nd.html>`_
- `Modal Cyclic Symmetry Example <https://dpfdocs.pyansys.com/examples/02-modal-harmonic/01-modal_cyclic.html>`_

.. GENERATED FROM PYTHON SOURCE LINES 171-177

.. code-block:: default


    # grab the result object from MAPDL
    result = mapdl.result
    print(result)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    PyMAPDL Result
    Units       : User Defined
    Version     : 22.2
    Cyclic      : True
    Result Sets : 40
    Nodes       : 7279
    Elements    : 1329


    Available Results:
    NSL : Nodal displacements





.. GENERATED FROM PYTHON SOURCE LINES 178-182

List the Table of Harmonic Indices
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
This is the table of harmonic indices. This table provides the corresponding
harmonic index for each cumulative mode.

.. GENERATED FROM PYTHON SOURCE LINES 182-187

.. code-block:: default

    print("C. Index   Harmonic Index")
    for i, hindex in zip(range(result.n_results), result.harmonic_indices):
        print(f"{i:3d}      {hindex:3d}")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C. Index   Harmonic Index
      0        0
      1        0
      2        0
      3        0
      4        0
      5        0
      6        0
      7        0
      8        0
      9        0
     10        1
     11       -1
     12        1
     13       -1
     14        1
     15       -1
     16        1
     17       -1
     18        1
     19       -1
     20       -2
     21        2
     22        2
     23       -2
     24       -2
     25        2
     26       -2
     27        2
     28        2
     29       -2
     30       -3
     31        3
     32       -3
     33        3
     34       -3
     35        3
     36       -3
     37        3
     38       -3
     39        3




.. GENERATED FROM PYTHON SOURCE LINES 188-197

Generate an Animation of a Traveling Wave
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Here's the nodal diameter 1 of first bend on our cyclic analysis.

We can get the first mode (generally first bend for a bladed rotor) for nodal
diameter 1 with:

``mode_num = np.nonzero(result.harmonic_indices == 1)[0][0]``


.. GENERATED FROM PYTHON SOURCE LINES 197-212

.. code-block:: default


    pv.global_theme.background = "w"

    _ = result.animate_nodal_displacement(
        11,
        displacement_factor=5e-4,
        movie_filename="traveling_wave11.gif",
        n_frames=30,
        off_screen=True,
        loop=False,
        add_text=False,
        show_scalar_bar=False,
        cmap="jet",
    )




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_003.png
   :alt: cyclic analysis
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 213-214

And here's 1st torsional for nodal diameter 3.

.. GENERATED FROM PYTHON SOURCE LINES 214-228

.. code-block:: default


    _ = result.animate_nodal_displacement(
        36,
        displacement_factor=2e-4,
        movie_filename="traveling_wave36.gif",
        n_frames=30,
        off_screen=True,
        loop=False,
        add_text=False,
        show_scalar_bar=False,
        cmap="jet",
    )





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_004.png
   :alt: cyclic analysis
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 229-235

Parametric Geometry
~~~~~~~~~~~~~~~~~~~
Since our geometry creation is scripted, we can create a structure with any
number of "sectors". Let's make a more interesting one with 20 sectors.

First, be sure to clear MAPDL so we start from scratch.

.. GENERATED FROM PYTHON SOURCE LINES 235-265

.. code-block:: default


    mapdl.clear()
    mapdl.prep7()

    # Generate a single sector of a 20 sector model
    gen_sector(mapdl, 20)

    # make it cyclic
    mapdl.cyclic()

    # Mesh it
    esize = 0.001
    mapdl.et(1, 186)
    mapdl.esize(esize)
    mapdl.vsweep("all")

    # apply materials
    mapdl.mp("EX", 1, 210e9)  # Elastic moduli in Pa (kg/(m*s**2))
    mapdl.mp("DENS", 1, 7800)  # Density in kg/m3
    mapdl.mp("NUXY", 1, 0.3)  # Poisson's Ratio
    mapdl.emodif("ALL", "MAT", 1)

    # Run the modal analysis
    output = mapdl.modal_analysis(nmode=6, freqb=1)

    # grab the result object from MAPDL
    result = mapdl.result
    print(result)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    PyMAPDL Result
    Units       : User Defined
    Version     : 22.2
    Cyclic      : True
    Result Sets : 66
    Nodes       : 3496
    Elements    : 579


    Available Results:
    NSL : Nodal displacements





.. GENERATED FROM PYTHON SOURCE LINES 266-270

List the Table of Harmonic Indices
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Note how the harmonic indices of these modes goes up to 10, or N/2 where N is
the number of sectors.

.. GENERATED FROM PYTHON SOURCE LINES 270-276

.. code-block:: default


    print("C. Index   Harmonic Index")
    for i, hindex in zip(range(result.n_results), result.harmonic_indices):
        print(f"{i:3d}    {hindex:3d}")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C. Index   Harmonic Index
      0      0
      1      0
      2      0
      3      0
      4      0
      5      0
      6     -1
      7      1
      8      1
      9     -1
     10     -1
     11      1
     12      2
     13     -2
     14     -2
     15      2
     16      2
     17     -2
     18      3
     19     -3
     20     -3
     21      3
     22      3
     23     -3
     24     -4
     25      4
     26     -4
     27      4
     28     -4
     29      4
     30     -5
     31      5
     32      5
     33     -5
     34     -5
     35      5
     36     -6
     37      6
     38     -6
     39      6
     40     -6
     41      6
     42     -7
     43      7
     44     -7
     45      7
     46     -7
     47      7
     48     -8
     49      8
     50     -8
     51      8
     52      8
     53     -8
     54     -9
     55      9
     56     -9
     57      9
     58      9
     59     -9
     60     10
     61     10
     62     10
     63     10
     64     10
     65     10




.. GENERATED FROM PYTHON SOURCE LINES 277-281

Plot First Bend for Nodal Diameter 2
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Note how you can clearly see two nodal lines for this mode shape since it's
nodal diameter 2.

.. GENERATED FROM PYTHON SOURCE LINES 281-287

.. code-block:: default


    result.plot_nodal_displacement(
        12, cpos="xy", cmap="jet", show_scalar_bar=False, add_text=False
    )





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_005.png
   :alt: cyclic analysis
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 288-292

Animate First Bend for Nodal Diameter 2
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Let's end this example by animating mode 12, which corresponds to first bend
for the 2nd nodal diameter of this example model.

.. GENERATED FROM PYTHON SOURCE LINES 292-304

.. code-block:: default


    _ = result.animate_nodal_displacement(
        12,
        displacement_factor=2e-4,
        movie_filename="traveling_wave12.gif",
        n_frames=30,
        off_screen=True,
        loop=False,
        add_text=False,
        show_scalar_bar=False,
        cmap="jet",
    )



.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_006.png
   :alt: cyclic analysis
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_cyclic_analysis_006.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  41.446 seconds)


.. _sphx_glr_download_examples_gallery_examples_00-mapdl-examples_cyclic_analysis.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cyclic_analysis.py <cyclic_analysis.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cyclic_analysis.ipynb <cyclic_analysis.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
